# calc-server-nats-docker

poetry-demo/: Dockerfile  pyproject.toml
poetry-demo/poetry_demo/: calc_server.py
poetry-demo/tests/: test_calc.py
